common/tests/badSyntax/include.output
firstInclude.tyc:2.27: 
Newline within string
firstInclude.tyc:2.28: 
Unclosed string at end of file
include.tyco:2.85: 
Syntax error at |
3 errors
