common/tests/badSyntax/include.tyco
new x
include "firstInclude.tyc" |
inaction